--- a/project_candradimuka/src/app/globals.css
+++ b/project_candradimuka/src/app/globals.css
@@ -9,9 +9,12 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #ffa332;
+    --background: #FFB353;
     --foreground: #ededed;
   }
+}
+* {
+  overflow-x: hidden;
 }
 
 body {
@@ -19,3 +22,223 @@ body {
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+.Background_image{
+  background-image: url("/res_img/bg_main_resized.png");
+  margin:0;
+  padding:0;
+  position: absolute;
+  top:0;
+  left:0;
+  width: 100vw;
+  height: 130vh;
+  z-index: 0;
+  background-color: #FFB353;
+}
+
+/* Extends the page*/
+.extra-content {
+  height: 2000vh; 
+}
+
+/* Navbar */
+
+.title{
+  position:fixed;
+  z-index: 99999;
+  top:-25;
+  left:0;
+  font-family: "Island Moments", Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  font-size: 100;
+  color: #000000;
+  -webkit-text-stroke: 2px #000000;
+  mix-blend-mode: normal;
+  left:200px;
+}
+
+.navbarbox{
+  top:0;
+  left:0;
+  position:fixed;
+  z-index: 9999;
+  background-color: #FFB353;
+  width: 100vw;
+  height: 100;
+  mix-blend-mode: lighten;
+}
+
+.navbar_links{
+  z-index:99999;
+  width:35%;
+  height:100%;
+  position: fixed;
+  display: flex;
+  position: fixed;
+  justify-content: space-between;
+  font-family: "Inria Serif", sans-serif;
+  color:#000000;
+  font-size: 30;
+  top: 0;
+  left: 50%;
+  padding: 25px 20px;
+  list-style-type: none;
+}
+
+.navbar_socials{
+  z-index:999999;
+  width:12%;
+  height:100%;
+  position: fixed;
+  display: flex;
+  justify-content: space-between;
+  top: 3px;
+  right:40px;
+  padding: 25px 20px;
+  list-style-type: none;
+  isolation: isolate;
+}
+
+.bibi-youtube{
+  margin:-2%
+}
+
+.Language{
+  position:fixed;
+  bottom:10;
+  right:10;
+  z-index: 999999;
+}
+
+/* Transition */
+
+.tr-1{
+  left: 0;
+  top: 95vh;
+  z-index: 3;
+  position: absolute; 
+}
+
+.tr-2{
+  left: 0;
+  top: 93vh;
+  z-index: 2;
+  position: absolute; 
+}
+
+.tr-3{
+  left: 0;
+  top: 90vh;
+  z-index: 1;
+  position: absolute; 
+}
+
+.transition_text{
+  z-index: 99;
+  color:White;
+  font-family: "Inria Serif";
+  font-size: 90;
+  width: fit-content;
+  height: fit-content;
+  align-items: center;
+  position:absolute;
+  top:120%;
+  filter: drop-shadow(10px 10px 15px rgba(0, 0, 0, 0.5));
+}
+
+.transition_image{
+  width: inherit;
+  height: inherit;
+  padding-left: 44.5%;
+}
+
+.arrowdowntr{
+  display: inline-block;
+  animation: upDown 1.5s ease-in-out infinite;
+}
+
+@keyframes upDown {
+  0% {
+    transform: translateY(0);
+  }
+  50% {
+    transform: translateY(-10px);
+  }
+  100% {
+    transform: translateY(0);
+  }
+}
+
+/* Section 1 */
+.section1{
+  position:absolute;
+  width:100vw;
+  height:300vw;
+  left:0;
+  top:120%;
+  overflow-y: scroll;
+}
+
+.s1top_guideline{
+  position: absolute;
+  top:0%;
+  left: 2.5%;
+}
+
+.s1bottom_guideline{
+  position: absolute;
+  top:14%;
+  left: 2.5%;
+}
+
+.s1_text{
+  position: absolute;
+  top:8%;
+  left:0%
+}
+
+.s1_text_top{
+  margin-left:10%;
+  font-family: "Island Moments";
+  font-size: 120;
+  color: #000000;
+  -webkit-text-stroke: 2px #000000;
+}
+
+.s1_text_bottom{
+  margin-left:10%;
+  font-family: "Island Moments";
+  font-size: 120;
+  padding-left:10%;
+  color: #000000;
+  -webkit-text-stroke: 2px #000000;
+}
+
+.s1_text_blackbox{
+  width: 100vw;
+  height: 150;
+  margin-top: 3%;
+  padding-top: 1.5%;
+  padding-left: 8%;
+  background-color: black;
+  font-family: "Instrument Serif";
+  font-size: 70;
+  color: WHITE;
+  /* -webkit-text-stroke: 2px #FFFFFF; */
+}
+
+.s1_arrowdown{
+  margin-left: 25%;
+  display: inline-block;
+  animation: upDown 1.5s ease-in-out infinite;
+}
+
+/* section 2
+.section2{
+  position: absolute;
+  left:0;
+  background-color: #000000;
+  width: 100vw;
+  height: 200vh;
+  z-index: 10;
+  top: 250%;
+} */
