--- a/project_candradimuka/src/app/globals.css
+++ b/project_candradimuka/src/app/globals.css
@@ -149,7 +149,7 @@ body {
 .transition_image{
   width: inherit;
   height: inherit;
-  padding-left: 44.5%;
+  padding-left: 47.5%;
 }
 
 .arrowdowntr{
@@ -176,7 +176,7 @@ body {
   height:300vw;
   left:0;
   top:120%;
-  overflow-y: scroll;
+  overflow: hidden
 }
 
 .s1top_guideline{
@@ -194,7 +194,7 @@ body {
 .s1_text{
   position: absolute;
   top:8%;
-  left:0%
+  left:-2%
 }
 
 .s1_text_top{
@@ -215,11 +215,11 @@ body {
 }
 
 .s1_text_blackbox{
-  width: 100vw;
+  width: 101.4vw;
   height: 150;
   margin-top: 3%;
   padding-top: 1.5%;
-  padding-left: 8%;
+  padding-left: 8.7%;
   background-color: black;
   font-family: "Instrument Serif";
   font-size: 70;
@@ -237,15 +237,49 @@ body {
 .section2{
   position: absolute;
   left:0;
-  background-color: #000000;
+  /* background-color: #000000; */
   width: 100vw;
-  height: 100vh;
+  height: 160vh;
   z-index: 10;
   top: 250%;
 }
 
-.Carousel-1{
-  width: 100vw;
-  height: 100vh;
-  z-index: 10;
+.carousel-control-prev {
+  width: 50px; /* Adjust the width of the control area */
+  left: 10px;  /* Adjust the left positioning of the previous arrow */
+}
+
+.carousel-control-next {
+  width: 50px; /* Adjust the width of the control area */
+  right: 30px;  /* Adjust the left positioning of the previous arrow */
+}
+
+.carousel-control-next, .carousel-control-prev{
+  margin-bottom: 27%;
+}
+
+/* Style the indicator dots as images */
+.carousel-indicators .active {
+  background-image: url('/res_img/Icons/white.png'); 
+}
+
+.carousel-indicators button {
+  background-image: url('/res_img/Icons/black.png');  
+}
+
+.carousel-indicators [data-bs-target]{
+  width: 30px;
+  height: 30px;
+  background-color:rgba(0, 0, 0, 0);
+}
+
+.carousel-indicators{
+  margin:0;
+  left:80%;
+  bottom:90%;
+}
+
+.SECTION2ANCHOR{
+  position:absolute;
+  margin-top:25.5%;
 }
