--- a/project_candradimuka/src/app/globals.css
+++ b/project_candradimuka/src/app/globals.css
@@ -37,9 +37,9 @@ body {
 }
 
 /* Extends the page*/
-.extra-content {
-  height: 2000vh; 
-}
+/* .extra-content {
+  height: 700vh; 
+} */
 
 /* Navbar */
 
@@ -322,4 +322,47 @@ body {
 .SECTION5ANCHOR{
   position:absolute;
   margin-top:25.7%;
+}
+
+/* section 6 */
+.section6{
+  left:0;
+  top:651vh;
+  z-index: 10;
+  height: 55vh;
+  width: 100vw;
+  font-family: "Island Moments";
+  font-size: 150;
+  color: #000000;
+  -webkit-text-stroke: 2px #000000;
+}
+
+.Footer{
+  left:0;
+  top:685vh;
+  z-index: 10;
+  height: 50vh;
+  width: 100vw;
+  font-family: "Island Moments";
+  font-size: 150;
+  color: #000000;
+  -webkit-text-stroke: 2px #000000;  
+  padding:0;
+}
+
+.playnow{
+  margin-left: 38%;
+  margin-top:15%;
+}
+
+.imgfooter_steam{
+  margin-top: 8%;
+  margin-left: 27%;
+  position: absolute;
+}
+
+.imgfooter_itch{
+  margin-top: 9.5%;
+  margin-left: 56.7%;
+  position: absolute;
 }
