--- a/project_candradimuka/src/app/globals.css
+++ b/project_candradimuka/src/app/globals.css
@@ -37,6 +37,8 @@ body {
   background-color: #FFB353;
 }
 
+
+
 /* Extends the page*/
 /* .extra-content {
   height: 700vh; 
@@ -55,6 +57,8 @@ body {
   -webkit-text-stroke: 2px #000000;
   mix-blend-mode: normal;
   left:200px;
+  cursor: url("/res_img/cursors/select.cur"), pointer;
+
 }
 
 .navbarbox{
@@ -83,6 +87,7 @@ body {
   left: 50%;
   padding: 25px 20px;
   list-style-type: none;
+  cursor: url("/res_img/cursors/select.cur"), pointer;
 }
 
 .navbar_socials{
@@ -151,6 +156,7 @@ body {
   width: inherit;
   height: inherit;
   padding-left: 47.5%;
+  cursor: url('/res_img/cursors/select.cur'), pointer;
 }
 
 .arrowdowntr{
@@ -263,6 +269,8 @@ body {
 
 .carousel-control-next, .carousel-control-prev{
   margin-bottom: 27%;
+  cursor: url("/res_img/cursors/select.cur"), pointer;
+
 }
 
 /* Style the indicator dots as images */
@@ -278,6 +286,8 @@ body {
   width: 30px;
   height: 30px;
   background-color:rgba(0, 0, 0, 0);
+  cursor: url("/res_img/cursors/select.cur"), pointer;
+
 }
 
 .carousel-indicators{
